--- a/nths/client/client/views/public/message/add.html
+++ b/nths/client/client/views/public/message/add.html
@@ -7,10 +7,10 @@
 	  <label>phone</label><input ng-model='message.phone'>
 	</div>
 	<div>
-	  <label>email</label> <input type='checkbox' ng-model='message.email>
+	  <label>email</label><input type='checkbox' ng-model='message.email'>
 	</div>
 	<div>
-	  <label>content</label> <input type='text' ng-model="message.content">
+	  <label>content</label><input type='text' ng-model="message.content">
 	</div>
 	<input type="submit" value="Submit">
 </form>
