update the codes

--- a/nths/client/client/views/admin/message/list.html
+++ b/nths/client/client/views/admin/message/list.html
@@ -1,5 +1,5 @@
 <div> 
-	<p>This is message list Page</p> 
+	<p>This is message list Page page={{page}}, size ={{pageSize}}</p> 
 	<table class="table table-condensed table-bordered table-hover">
 		<thead>
 			<tr>
@@ -8,22 +8,26 @@
 				<th>phone</th>
 				<th>email</th>
 				<th>content</th>
+				<!--
 				<th>mark</th>
 				<th>delete</th>
+				-->
 			</tr>
 		</thead>
 		<tbody>
 			<tr ng-class-even="'even'" ng-class='{selected: $index==selectedRow}' ng-click='selectUser($index)' ng-repeat="message in messages">
 
-				<td>{{$index + 1}}</td>
+				<td>{{(page)*pageSize + $index + 1}}</td>
 				<td>{{message.name}}</td>
 				<td>{{message.phone}}</td>
 				<td>{{message.email}}</td>
 				<td>{{message.content}}</td>
+				<!--
 				<td><a class='btn btn-primary' href="/message/{{message._id}}" ng-class='{disabled: index < 0}'>{{message.city}}</a></td>
 				<td><a class='btn btn-primary' ng-click='deleteUser(user, $index)' ng-class='{disabled: index < 0}'>Delete</a></td>
-
+				-->
 			<tr>
 		</tbody>
 	</table>
+	<demo-caller pc="pageCount" dial="setPage(page)"></demo-caller>
 </div>
