--- a/nths/client/client/views/layout/public.html
+++ b/nths/client/client/views/layout/public.html
@@ -22,7 +22,7 @@
 <div class="row">
   <div class="span8" ui-view></div>
   <div class="span4" ng-controller="AddMessageCtrl">
-  	<p>Leave us a message:</p>
+  	<p>Leave us a message:{{text}}</p>
 	<form ng-submit="saveMessage()" >
 		<div>
 		  <label>name</label><input ng-model='message.name'>
